fix what-i-can-do h1 on mobiles

--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -310,7 +310,7 @@ body {
     }
     
     .what-i-can-do h1 {
-        padding-top: 0;
+        padding-top: 2rem;
     }
 }
 /************************************************/
